Initial Pebble codebase

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.DS_Store
+
+### ANDROID
 # Built application files
 *.apk
 *.ap_
@@ -25,3 +28,15 @@ proguard/
 
 # Log Files
 *.log
+
+
+## PEBBLE
+
+# Ignore build generated files
+build
+
+# Ignore waf lock file
+.lock-waf*
+
+
+## APPLE WATCH
