--- a/handshaker_pebble/appinfo.json
+++ b/handshaker_pebble/appinfo.json
@@ -1,9 +1,9 @@
 {
-  "uuid": "5d916845-5b71-45a3-b28a-af4f39a8f87d",
-  "shortName": "handshaker",
-  "longName": "handshaker",
-  "companyName": “weezlabs”,
-  "versionLabel": “0.1”,
+  "uuid": "10fd2b6b-a7b4-44fc-932b-7ddd03d40634",
+  "shortName": "handshaker_pebble",
+  "longName": "handshaker_pebble",
+  "companyName": "MakeAwesomeHappen",
+  "versionLabel": "1.0",
   "sdkVersion": "3",
   "targetPlatforms": ["aplite", "basalt"],
   "watchapp": {
