--- a/handshaker_pebble/appinfo.json
+++ b/handshaker_pebble/appinfo.json
@@ -1,7 +1,7 @@
 {
   "uuid": "10fd2b6b-a7b4-44fc-932b-7ddd03d40634",
-  "shortName": "handshaker_pebble",
-  "longName": "handshaker_pebble",
+  "shortName": "Handshaker",
+  "longName": "Handshaker",
   "companyName": "weezlabs",
   "versionLabel": "0.1",
   "sdkVersion": "3",
