--- a/handshaker_android/phoneapp/android/build.gradle
+++ b/handshaker_android/phoneapp/android/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.getpebble.pebblekitexample"
+        applicationId "com.weezlabs.handshakerphone"
         minSdkVersion 15
         targetSdkVersion 22
     }
