--- a/handshaker_android/phoneapp/android/src/main/AndroidManifest.xml
+++ b/handshaker_android/phoneapp/android/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.getpebble.pebblekitexample"
+    package="com.weezlabs.handshakerphone"
     android:versionCode="1"
     android:versionName="1.0" >
 
