--- a/handshaker_android/phoneapp/android/build.gradle
+++ b/handshaker_android/phoneapp/android/build.gradle
@@ -19,6 +19,9 @@ android {
 
     dependencies {
         compile 'com.getpebble:pebblekit:3.0.0'
+        compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
+        compile 'com.android.support:cardview-v7:21.0.+'
+        compile 'com.android.support:recyclerview-v7:21.0.+'
     }
 
     repositories {
