--- a/handshaker_android/phoneapp/android/src/main/AndroidManifest.xml
+++ b/handshaker_android/phoneapp/android/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:icon="@drawable/ic_launcher">
+            android:icon="@drawable/ic_app">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
