--- a/handshaker_android/android_wear/wear/src/main/AndroidManifest.xml
+++ b/handshaker_android/android_wear/wear/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     package="com.weezlabs.research.handshaker">
 
     <uses-feature android:name="android.hardware.type.watch" />
+
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
 
     <application
         android:allowBackup="true"
@@ -22,6 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".SensorBackgroundService" />
     </application>
 
 </manifest>
