--- a/handshaker_android/android_wear/mobile/build.gradle
+++ b/handshaker_android/android_wear/mobile/build.gradle
@@ -19,16 +19,10 @@ android {
     }
 }
 
-buildscript {
-    repositories {
-        jcenter()
-    }
-}
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     wearApp project(':wear')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
-    compile 'com.github.aakira:okwear:1.0.2'
+    compile 'Teleport:teleportlib:0.1.4'
 }
