--- a/handshaker_android/android_wear/wear/build.gradle
+++ b/handshaker_android/android_wear/wear/build.gradle
@@ -20,16 +20,10 @@ android {
     }
 }
 
-buildscript {
-    repositories {
-        jcenter()
-    }
-}
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:1.2.0'
     provided 'com.google.android.wearable:wearable:1.0.0'
     compile 'com.google.android.gms:play-services-wearable:7.5.0'
-    compile 'com.github.aakira:okwear:1.0.2'
+    compile 'Teleport:teleportlib:0.1.4'
 }
